# audiobook-ai-1fr

./: README.md  cli.py  main.py  pyproject.toml  requirements.txt  select_project_folder.sh  select_project_folder_interactive.sh  test_epub.epub  user_friendly_select.sh
audiobook_ai/: __init__.py
audiobook_ai/analysis/: __init__.py  character_analyzer.py
audiobook_ai/audio/: __init__.py  assembly.py  validation.py
audiobook_ai/core/: __init__.py  config.py  epub_parser.py  epub_parser.py.bak  project.py  text_segmenter.py
audiobook_ai/gui/: __init__.py  app.py
audiobook_ai/tts/: __init__.py  qwen_engine.py  voice_manager.py
docs/: user-guide.md
tests/: test_pipeline.py
